--- a/screen_data.kv
+++ b/screen_data.kv
@@ -122,20 +122,20 @@
 			spacing: 20
 			size_hint_y: 0.1
 
-			MDFillRoundFlatIconButton:
-				id: bt_screen_standby
-				icon: 'timer-sand'
-				text: "STANDBY"
-				font_style: 'Button'
-				size_hint_x: 0.25
-				on_press: root.screen_standby()
+			# MDFillRoundFlatIconButton:
+			# 	id: bt_screen_standby
+			# 	icon: 'timer-sand'
+			# 	text: "STANDBY"
+			# 	font_style: 'Button'
+			# 	size_hint_x: 0.25
+			# 	on_press: root.screen_standby()
 
 			MDFillRoundFlatIconButton:
 				id: bt_screen_dashboard
 				icon: "view-dashboard"
 				text: "DASHBOARD"
 				font_style: 'Button'
-				size_hint_x: 0.25
+				size_hint_x: 0.5
 				on_press: root.screen_dashboard()
 
 			MDFillRoundFlatIconButton:
@@ -143,5 +143,5 @@
 				icon: "pencil"
 				text: "DATA"
 				font_style: 'Button'
-				size_hint_x: 0.25
+				size_hint_x: 0.5
 				on_press: root.screen_data()
