--- a/screen_data.kv
+++ b/screen_data.kv
@@ -61,6 +61,10 @@
 				font_style: 'H6'
 
 			MDLabel:
+				id: lb_train_wheel
+				font_style: 'H6'
+				
+			MDLabel:
 				id: lb_train_speed
 				font_style: 'H6'
 
