update main program and dashboard train picture 240712

--- a/screen_dashboard.kv
+++ b/screen_dashboard.kv
@@ -79,7 +79,7 @@
 			size_hint_y: 0.68
 			Image:
 				id: background_image
-                source:'asset/kereta.png'
+                source:'asset/train_standby.png'
                 allow_stretch: True 
 				size_hint_y: 0.95
 				pos_hint: {'center_x': 0.5,'center_y': 0.5}
