--- a/screen_dashboard.kv
+++ b/screen_dashboard.kv
@@ -4,6 +4,7 @@
     MDBoxLayout: #main screen
         orientation: "vertical"
 		id: layout_dashboard
+		md_bg_color: "#FFFFFF"
 
         MDBoxLayout: #header layout
             id: header_layout
